<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ErrorHistory" Id="{43b6c0da-4363-4a91-9d60-bb17a15cdeb9}">
    <Declaration><![CDATA[///Error history type
TYPE ErrorHistory : ARRAY[ObjectSetup.ErrorHistMin..ObjectSetup.ErrorHistMax] OF DWORD; END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>